fixed excursion title overflow on excursionToolbar

--- a/src/css/app.less
+++ b/src/css/app.less
@@ -344,5 +344,8 @@ h4#excursionTitle {
   font-size: 18px;
   margin: 0;
   line-height: 56px;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
